# motmot_ros_stack

./: .gitignore  CMakeLists.txt  README.rst  mainpage.dox  manifest.xml  motmot_ros_stack.rosinstall  rosdep.yaml  stack.xml
camera_trigger/: CMakeLists.txt  manifest.xml  package.xml  setup.py
camera_trigger/nodes/: camtrigger
camera_trigger/src/triggerlib/: ttrigger.py
camera_trigger/srv/: SetFramerate.srv
camiface_ros/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
camiface_ros/CMakeModules/: Findcamiface.cmake
camiface_ros/cfg/: CamIFace.cfg  camera_config.cfg
camiface_ros/nodes/: camnode
camiface_ros/src/: camiface_ros_capture.cpp  camnode.cpp  colormap.frag  colormap.vert  gl_view.cpp  raw_info.cpp
camiface_ros/tools/: shader2c.py
motmot_ros_stack/: CMakeLists.txt  package.xml
motmot_ros_utils/: manifest.xml  package.xml  setup.py
motmot_ros_utils/src/rosutils/: debug.py  formats.py  io.py
motmot_ros_utils/tests/: Basler_21029383.rad  Basler_21029383.yaml  basename1.rad  testall.py
src/: camiface_ros_capture.cpp  gl_view.cpp  raw_info.cpp  raw_view.cpp
