<package>
  <name>camera_trigger</name>
  <version>0.0.1</version>
  <description>
     camera_trigger
  </description>
  <author>John Stowers</author>
  <maintainer email="strawman@astraw.com">Andrew Straw</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>rospy</run_depend>

</package>
