<package>
  <name>motmot_ros_stack</name>
  <version>0.0.1</version>
  <description>
     motmot_ros_stack
  </description>
  <author>strawlab</author>
  <maintainer email="strawman@astraw.com">Andrew Straw</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>camera_trigger</run_depend>
  <run_depend>camiface_ros</run_depend>
  <run_depend>motmot_ros_utils</run_depend>
</package>
